--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Nov 18 17:01:40 CET 2013
-app.grails.version=2.3.2
+#Wed Mar 12 14:33:51 CET 2014
+app.grails.version=2.3.7
 app.name=agorapulse-maintenance
+app.servlet.version=3.0
 app.version=1.0
